@@ -18,5 +18,5 @@
 		"page": "options.html"
 	},
     "permissions": [ "cookies", "<all_urls>", "storage", "webRequest", "webRequestBlocking"],
-	"version": "1.2.11"
+	"version": "1.3.0"
 }
