@@ -1,5 +1,6 @@
 Updates--
 
+2018-09-09 v1.3.0: Fixed chicagobusiness.com
 2018-09-06 v1.2.11: Add Dynamed Plus
 2018-08-26 v1.2.10: Fixed alphabeticised lists, Added The New Statesman and The Spectator
 2018-07-04 v1.2.9: Added The Denver Post (denverpost.com, note: need to turn off uBlock for this site)
